syntax = "proto3";

package com.chatbot.core.app.grpc;

option java_package = "com.chatbot.core.app.grpc";
option java_multiple_files = true;

service AppService {
    rpc RegisterApp(RegisterAppRequest) returns (RegisterAppResponse);
    rpc GetApp(GetAppRequest) returns (GetAppResponse);
    rpc SearchApps(SearchAppsRequest) returns (SearchAppsResponse);
    rpc SubscribeToApp(SubscribeAppRequest) returns (SubscribeAppResponse);
    rpc GetSubscription(GetSubscriptionRequest) returns (GetSubscriptionResponse);
    rpc EvaluateGuard(EvaluateGuardRequest) returns (EvaluateGuardResponse);
}

message AppGrpcMessage {
    int64 id = 1;
    string name = 2;
    string display_name = 3;
    string description = 4;
    string app_type = 5;
    string status = 6;
    string version = 7;
    string api_endpoint = 8;
    string webhook_url = 9;
    bool is_active = 10;
    bool is_public = 11;
    string created_at = 12;
    string updated_at = 13;
    int64 created_by = 14;
    int64 updated_by = 15;
}

message SubscriptionGrpcMessage {
    int64 id = 1;
    int64 app_id = 2;
    int64 tenant_id = 3;
    int64 user_id = 4;
    string subscription_plan = 5;
    string subscription_status = 6;
    string subscription_start = 7;
    string subscription_end = 8;
    bool auto_renew = 9;
    string trial_end = 10;
    string created_at = 11;
    string updated_at = 12;
    int64 created_by = 13;
    int64 updated_by = 14;
}

message RegisterAppRequest {
    string name = 1;
    string display_name = 2;
    string description = 3;
    string app_type = 4;
    string version = 5;
    string api_endpoint = 6;
    string webhook_url = 7;
    string config_schema = 8;
    string default_config = 9;
    bool is_public = 10;
    int64 user_id = 11;
}

message RegisterAppResponse {
    AppGrpcMessage app = 1;
    string message = 2;
}

message GetAppRequest {
    int64 app_id = 1;
}

message GetAppResponse {
    AppGrpcMessage app = 1;
}

message SearchAppsRequest {
    string name_filter = 1;
    string app_type = 2;
    string status = 3;
    bool is_active = 4;
    int32 page = 5;
    int32 size = 6;
}

message SearchAppsResponse {
    repeated AppGrpcMessage apps = 1;
    int32 total_count = 2;
}

message SubscribeAppRequest {
    int64 app_id = 1;
    int64 tenant_id = 2;
    string subscription_plan = 3;
    bool auto_renew = 4;
    int64 user_id = 5;
}

message SubscribeAppResponse {
    SubscriptionGrpcMessage subscription = 1;
    string message = 2;
}

message GetSubscriptionRequest {
    int64 subscription_id = 1;
}

message GetSubscriptionResponse {
    SubscriptionGrpcMessage subscription = 1;
}

message EvaluateGuardRequest {
    int64 app_id = 1;
    string context = 2;
    string request_data = 3;
}

message EvaluateGuardResponse {
    bool allowed = 1;
    string message = 2;
}
